# c_audio_playground

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  midi.lua  midi_message.py  midi_system.dio  schema.yaml  test.lua  test.py  test2.py
lib/: imgui.ini
src/: main.cpp
src/components/: AudioSampler.cpp  AudioSampler.h  CmakeLists.txt  Metronome.h
src/control_scripts/lua/: test.lua
src/control_scripts/python/mpc_studio_mk2/: __init__.py
src/control_scripts/python/push2/: ControlSurface.py  __init__.py
src/core/: Application.cpp  Application.h  AudioEngine.cpp  AudioEngine.h  AudioEngineContext.h  AudioNode.cpp  AudioNode.h  CmakeLists.txt  Daw.cpp  Daw.h  EventRegistry.h  MidiEngine.cpp  MidiEngine.h  MidiHandler.cpp  MidiHandler.h  MidiMsg.cpp  MidiMsg.h  MidiNode.cpp  MidiNode.h  MidiPorts.cpp  MidiPorts.h  MidiRouter.cpp  MidiRouter.h  MidiScriptHander.h  MidiScriptHandler.cpp  Playhead.h  Project.cpp  Project.h  SongPosition.h  TrackNode.cpp  TrackNode.h
src/nodes/: BufferNode.cpp  BufferNode.h  CmakeLists.txt  FilterNode.cpp  FilterNode.h  GainNode.cpp  GainNode.h  LevelMeterNode.cpp  LevelMeterNode.h  MuteNode.cpp  MuteNode.h  PanNode.cpp  PanNode.h
src/ui/: AudioSamplerWidget.h  Footer.h  MainWindow.h  MasterChannel.h  MixerWindow.h  SessionWindow.h  Settings.h  Sidebar.h  SongWindow.h  Toolbar.h  TrackHeader.h  TrackWindow.h  UIState.h  main_ui.h
src/ui/widgets/: Fader.h  IconWidget.h  Knobs.h  MenuButton.h  MetronomeButton.h  PlayButton.h  RecordButton.h  StereoMeter.h  StopButton.h  ToggleButton.h  include.h
src/util/: path_utils.h  uuid_generator.h
